<resources>
    <string name="app_name">Mariner Licence Prep</string>
    <string name="username">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="sign_up">S\nI\nG\nN\n \nU\nP</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">L\no\ng\n \ni\nn</string>
    <string name="log_in_normal">Log in</string>
    <string name="sign_up_normal">Sign up</string>
    <string-array name="searchSelectionSpinnerItems">
        <item>Search All Engine</item>
        <item>Search Electrical</item>
        <item>Search General Subjects</item>
        <item>Search Motor Plants</item>
        <item>Search Steam Plants</item>
        <item>Search Safety</item>
        <item>Search Gas Turbines</item>
    </string-array>
    <string name="settings_title">Settings</string>
    <string name="edit_licence_rating">Edit Licence/Rating</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="edit_subscription_profile">Edit Subscription/Profile</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="questions">QUESTIONS</string>
    <string name="reset_bookmark">Reset Bookmarks</string>
    <string name="app">APP</string>
    <string name="reset_scores">Reset Scores</string>
    <string name="about">ABOUT</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="user">USER</string>
    <string name="logout">Logout</string>
    <string name="engine">Engine</string>
    <string name="account">ACCOUNT</string>
    <string name="third_assistant_engineer">Third Assistant Engineer</string>
    <string name="first_assistant_engineer">First Assistant Engineer</string>
    <string name="chief_engineer">Chief Engineer</string>
    <string name="assistant_engineer">Assistant Engineer</string>
    <string name="designated_duty_engineer">Designated Duty Engineer</string>
    <string name="feedback_text">Please provide any feedback or improvements you want in this app - support@marinerlicenseprep.com</string>
    <string name="terms">Terms</string>
    <string name="terms_amp_conditions_title"><u><![CDATA[Terms & Conditions]]></u></string>
    <string name="changes_to_this_terms_and_conditions"><u>Changes to this terms and Conditions</u></string>
    <string name="contact_us"><u>Contact us</u></string>
    <string name="mariner_mail">suport@marinelicenseprep.com</string>
    <string name="privacy">Privacy</string>
    <string name="terms_of_service_text">
        <u>Terms &amp; Conditions</u>\n\n\nBy downloading or using the Mariner License Prep platform, these terms will automatically apply to you – ensure you read and understand these terms before using this study tool. You’re not allowed to copy, or modify the application, any part of the application, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the application, and you also shouldn’t try to translate the application to other languages or make derivative versions. The application itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to Mariner License Prep, LLC.\n\n\nMariner License Prep, LLC is committed to ensuring that the application is as useful and effective as possible. For that reason, we reserve the right to make changes to the application or to charge for its services, at any time and for any reason. Any changes made in relation to pricing will be clearly communicated with the users.\n\n\nThe Mariner License Prep application stores and processes personal data that you have provided to us, in order to provide our service. It’s your responsibility to keep your phone and access to the application secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the Mariner License Prep application won’t work properly or at all.\n\n\nYou should be aware that there are certain things that Mariner License Prep, LLC will not take responsibility for. Certain functions of the application will require the application to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but Mariner License Prep, LLC cannot take responsibility for the application not working at full functionality if you don’t have access to Wi-Fi, and/or you don’t have any of your data allowance left.\n\n\nIf you’re using the application outside of an area with Wi-Fi, you should remember that your terms of the agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the application, or other third-party charges. In using the application, you’re accepting responsibility for any such charges, including roaming data charges if you use the application outside of your home territory (i.e. region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the application, please be aware that we assume that you have received permission from the bill payer for using the app.\n\n\nAlong the same lines, Mariner License Prep, LLC cannot always take responsibility for the way you use the application. Mariner License Prep, LLC cannot be held responsible for any unexpected malfunctions on your respective devices.\n\n\nMariner License Prep, LLC relies on third parties to provide information in the application so that we can make it available to you. Mariner License Prep, LLC accepts no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app.\n\n\nAt some point, Mariner License Prep, LLC may wish to update the app. The application is currently available on iOS and as a web application – the requirements for these platforms may change, and you’ll need to download the updates if you want to keep using the application. Mariner License Prep, LLC does not promise that it will always update the application so that it is relevant to you and/or works with your specific platform. However, you promise to always accept updates to the application when offered to you, we may also wish to stop providing the application, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the application, and (if needed) delete it from your device.\n\n\n<u>Changes to This Terms and Conditions\n</u>\n\nWe may update our Terms and Conditions from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Terms and Conditions on this page. These changes are effective immediately after they are posted on this page.\n\n\n<u>Contact Us</u>\n\n\nIf you have any questions or suggestions about my Terms and Conditions, do not hesitate to contact us.\n\n<u>support@marinerlicenseprep.com</u>
    </string>
</resources>