<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/lightGray"
                android:gravity="bottom|left"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:text="@string/account"
                app:layout_constraintTop_toTopOf="@+id/scrollView2"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/allEngine"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/white"
                android:drawableEnd="@mipmap/right_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:paddingStart="30dp"
                android:text="@string/edit_subscription_profile"
                app:layout_constraintTop_toTopOf="@+id/scrollView2"
                tools:layout_editor_absoluteX="0dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="30dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/editLicenceRating"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/white"
                android:drawableEnd="@mipmap/right_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:paddingStart="30dp"
                android:text="@string/edit_licence_rating"
                app:layout_constraintTop_toTopOf="@+id/scrollView2"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="30dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/changeEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/white"
                android:drawableRight="@mipmap/right_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/change_email"
                app:layout_constraintTop_toTopOf="@+id/scrollView2"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="30dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/changePassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/white"
                android:drawableEnd="@mipmap/right_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/change_password"
                app:layout_constraintTop_toTopOf="@+id/scrollView2"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/app"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/lightGray"
                android:gravity="bottom|left"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:text="@string/app"
                app:layout_constraintTop_toTopOf="@+id/scrollView2"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/submitFeedback"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/submit_feedback"
                app:layout_constraintTop_toTopOf="@+id/scrollView2"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/questions"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/lightGray"
                android:gravity="bottom|left"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:text="@string/questions"
                app:layout_constraintTop_toTopOf="@+id/scrollView2"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/reset_bookmark"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/reset_bookmark"
                app:layout_constraintTop_toTopOf="@+id/scrollView2"
                tools:layout_editor_absoluteX="0dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="30dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/reset_scores"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/reset_scores"
                app:layout_constraintTop_toTopOf="@+id/scrollView2"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/lightGray"
                android:gravity="bottom|start"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:text="@string/about"
                app:layout_constraintTop_toTopOf="@+id/scrollView2"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/terms_of_service"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/white"
                android:drawableEnd="@mipmap/right_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/terms_of_service"
                app:layout_constraintTop_toTopOf="@+id/scrollView2"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="30dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/white"
                android:drawableEnd="@mipmap/right_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/privacy_policy"
                app:layout_constraintTop_toTopOf="@+id/scrollView2"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/lightGray"
                android:gravity="bottom|left"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:text="@string/user"
                app:layout_constraintTop_toTopOf="@+id/scrollView2"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/white"
                android:drawableEnd="@mipmap/info_image"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/logout"
                app:layout_constraintTop_toTopOf="@+id/scrollView2"
                tools:layout_editor_absoluteX="0dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/lightGray"/>
        </LinearLayout>


    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="0dp"
        app:contentInsetStart="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Settings"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.Toolbar>

</android.support.constraint.ConstraintLayout>